# imdb-manager

./: Cargo.toml
src/: cli.rs  lib.rs  main.rs
