[package]
name = "imdb-manager"
version = "0.1.0"
authors = ["Santos Gallegos <stsewd@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
serde = { version = "1.0", features = ["derive"] }
clap = "3.0.0-beta.5"
